--- a/MemoryGame/Base.lproj/Main.storyboard
+++ b/MemoryGame/Base.lproj/Main.storyboard
@@ -22,8 +22,11 @@
                                 <rect key="frame" x="162" y="495" width="91" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Pulsa y juega"/>
+                                <connections>
+                                    <action selector="playerRandom:" destination="BYZ-38-t0r" eventType="touchUpInside" id="XJS-Hu-deb"/>
+                                </connections>
                             </button>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="djokovic" translatesAutoresizingMaskIntoConstraints="NO" id="Aaq-5o-q7g">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="pelota" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Aaq-5o-q7g">
                                 <rect key="frame" x="99" y="205" width="217" height="214"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
@@ -31,6 +34,9 @@
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="players" destination="Aaq-5o-q7g" id="tCC-E3-gIE"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
@@ -186,6 +192,7 @@
         <image name="medvedev" width="590" height="437"/>
         <image name="murray" width="1396" height="785"/>
         <image name="nadal" width="328" height="206"/>
+        <image name="pelota" width="425" height="425"/>
         <image name="thiem" width="900" height="656"/>
         <image name="tsitsipas" width="1200" height="675"/>
     </resources>
