--- a/MemoryGame/Base.lproj/Main.storyboard
+++ b/MemoryGame/Base.lproj/Main.storyboard
@@ -36,6 +36,7 @@
                     </view>
                     <connections>
                         <outlet property="players" destination="Aaq-5o-q7g" id="tCC-E3-gIE"/>
+                        <segue destination="OdF-x2-uuz" kind="show" identifier="chooseScreen" id="O6u-Pu-HGe"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -46,14 +47,14 @@
         <scene sceneID="CRt-Wk-VsF">
             <objects>
                 <viewController id="OdF-x2-uuz" customClass="Photos" customModule="MemoryGame" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="c7f-9g-qda">
+                    <view key="view" opaque="NO" contentMode="scaleToFill" id="c7f-9g-qda">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="kDF-y1-rml">
                                 <rect key="frame" x="87" y="160" width="240" height="500"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="backgroundColor" red="1" green="0.0" blue="0.024170271520000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="RPc-xf-yy9">
                                     <size key="itemSize" width="103" height="113"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
@@ -179,6 +180,9 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="Uc9-Gj-nnJ"/>
                     </view>
+                    <connections>
+                        <outlet property="fotos" destination="kDF-y1-rml" id="7VL-6Y-Dek"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Q6R-4I-X1K" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
